# ppt-agent-V2

./: .env.example  .gitignore  LICENSE  README.md  deck.pptx  plan.json  pyproject.toml  pytest.ini  require.md
.ppt-agent/llm/keys/: deepseek.key  kimi.key
.ppt-agent/memory/: user_preferences.json
examples/: basic_spec.json
examples/skills/paper-teaching-deck/: skill.json  skill.md
output/: SIEVE.html  SIEVE.pptx  shell-deck.pptx  shell-plan.json
src/ppt_agent/: __init__.py
src/ppt_agent/agent/: __init__.py  chat_agent.py  skill_loader.py  skill_manifest.py  skill_registry.py  skills.py  user_skills.py
src/ppt_agent/cli/: main.py
src/ppt_agent/domain/: models.py
src/ppt_agent/graph/: agent.py
src/ppt_agent/llm/: planner.py  providers.py
src/ppt_agent/nodes/: approve.py  asset_plan.py  asset_resolve.py  build.py  plan.py  qa.py  repair.py
src/ppt_agent/prompts/: plan.md  qa.md  repair.md  system.md
src/ppt_agent/runtime/: __init__.py  html_deck.py  image_assets.py  planner.py  pptx.py  source_store.py  workspace.py
src/ppt_agent/shell/: __init__.py  app.py  commands.py  draft.py  session.py
src/ppt_agent/storage/: json_store.py  llm_settings.py  plan_io.py  project_memory.py
src/ppt_agent/tools/: __init__.py  base.py  ppt.py
src/ppt_agent/utils/: state.py
tests/: conftest.py  test_approve_gate.py  test_image_assets.py  test_llm_planner.py  test_memory_evidence_flow.py  test_plan.py  test_plan_out_cli.py  test_project_memory.py  test_qa_repair.py  test_rich_spec_pipeline.py  test_shell.py  test_user_skills.py
