[project]
name = "ppt-agent"
version = "0.1.0"
description = "A LangGraph-based CLI agent for planning, building, QA, and repairing PowerPoint decks."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "pypdf>=5.0.0",
    "python-pptx>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
ppt-agent = "ppt_agent.cli.main:app"
ppt = "ppt_agent.shell.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_agent"]
